--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python
   - click=8.0.1
   - pysam=0.16.0.1
-  - python=3.9.6
   - pip=21.2.1
