--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,10 @@ jobs:
         run: |
           pip install flake8
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-      - name: Test with pytest
+      - name: Install bamAlignCleaner
         shell: bash -l {0}
         run: |
-          pip install -e .
-          pip install pytest
-          # pytest
+          pip install .
       - name: Check bamAlignCleaner help message
         shell: bash -l {0}
         run: |
