--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 
 jobs:
   sam2lca_ci:
-    name: sam2lca_ci
+    name: bamAlignCleaner-CI
     runs-on: 'ubuntu-latest'
     if: "!contains(github.event.head_commit.message, '[skip_ci]')"
     steps:
@@ -36,3 +36,4 @@ jobs:
         run: |
           bamAlignCleaner -o test.bam tests/data/test.bam
           bamAlignCleaner -m index_stat -o test.bam tests/data/test.bam
+          bamAlignCleaner -r tests/data/reflist2.txt tests/data/test.bam
