--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[skip_ci]')"
     steps:
       - uses: actions/checkout@v2
-      - uses: conda-incubator/setup-miniconda@v2
+      - uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: 3.7
+          python-version: 3.12
           mamba-version: "*"
           channels: conda-forge,bioconda,defaults
           channel-priority: true
@@ -37,3 +37,4 @@ jobs:
           bamAlignCleaner -o test.bam tests/data/test.bam
           bamAlignCleaner -m index_stat -o test.bam tests/data/test.bam
           bamAlignCleaner -r tests/data/reflist2.txt tests/data/test.bam
+          bamAlignCleaner -f tests/data/ref.fa tests/data/test.bam
