--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -9,11 +9,11 @@ jobs:
       name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
       runs-on: ubuntu-18.04
       steps:
-        - uses: actions/checkout@v1
-        - name: Setup Python 3.7
-          uses: actions/setup-python@v1
+        - uses: actions/checkout@v4
+        - name: Setup Python 3.12
+          uses: actions/setup-python@v5
           with:
-            python-version: 3.7
+            python-version: '3.12'
         - name: Build bamAlignCleaner
           run: |
             pip install wheel
