--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - defaults
 dependencies:
   - python
-  - click=8.0.1
-  - pysam=0.16.0.1
-  - pip=21.2.1
+  - click
+  - pysam
+  - pip
   - tqdm
