--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -16,7 +16,7 @@ jobs:
             python-version: '3.12'
         - name: Build bamAlignCleaner
           run: |
-            pip install wheel
+            pip install wheel setuptools
             python setup.py sdist bdist_wheel
         - name: Publish distribution 📦 to PyPI
           uses: pypa/gh-action-pypi-publish@master
